--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 :root {
-  --very-dark-color: #536456;
-  --dark-color: #0d0e0d;
-  --main-color: #323336;
-  --light-color: #f7fcfa;
-  --base-color: #e6eee4;
+  --very-dark-color: #050505;
+  --dark-color: #363b37;
+  --main-color: #48574b;
+  --light-color: #ffffff;
+  --base-color: #a4be9d;
   --contrast-color: #bd1e1e;
 }
 
@@ -70,7 +70,7 @@ header.masthead {
 }
 
 #about{
-  background-color: #e9ecef;
+  background-color: var(--light-color);
 }
 
 #pro1{
@@ -84,7 +84,7 @@ header.masthead {
 }
 
 #pro3{
-  background: url(../images/logodesign.png);
+  background: url(../images/designing.jpg);
   background-size: cover;
 }
 
@@ -99,7 +99,7 @@ header.masthead {
 }
 
 .customBtn{
-  background-color: rgba(69, 155, 95, 0.7);
+  background-color: var(--light-color);
   margin-bottom: 20px;
   height: 75px;
   width: 200px;
@@ -107,12 +107,40 @@ header.masthead {
   border-bottom: 5px solid var(--contrast-color);
 }
 
-#experience, #work-details {
-  background-color: #0d0e0d;
-  color: #e6eee4;
+.double-height-row{
+  height: 200%;
+}
+
+#work {
+  background-color: var(--very-dark-color);
+  color: var(--light-color);
+}
+
+#experience{
+  background-color: var(--light-color);
+  color: var(--dark-color)
+}
+
+#passion, #work{
+  background-color: var(--dark-color);
+  color: var(--base-color);
+}
+
+#work-details{
+  background-color: var(--base-color);
+  color: var(--dark-color);
 }
 
 #passion p, #passion a{
   font-size: 12px;
 }
 
+#project1, #project4{
+  background-color: var(--dark-color);
+  color: white;
+}
+
+#project2, #project5{
+  background-color: var(--light-color);
+  color: rgb(2, 2, 2);
+}
